--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           "@type": "WebSite",
           "@id": "https://gestordeautos.com.mx/#website",
           "name": "Gestor de Autos",
-          "alternateName": ["Gestoría Vehicular Online Edomex", "Placas y Licencias Mexico", "Gestoría Vehicular CDMX"],
+          "alternateName": ["Gestoría Vehicular Online CDMX, EdoMex y Morelos", "Placas y Licencias en Línea", "Gestor de Trámites Vehiculares"],
           "url": "https://gestordeautos.com.mx",
           "publisher": { "@id": "https://gestordeautos.com.mx/#organization" },
           "potentialAction": {
@@ -80,7 +80,7 @@
           "logo": "https://gestordeautos.com.mx/assets/images/logo.jpg",
           "telephone": "+525535757364",
           "url": "https://gestordeautos.com.mx",
-          "description": "Tu Gestoría Vehicular de confianza en el Estado de México y CDMX. Especialistas en alta de placas, reemplacamiento y cambios de propietario en Naucalpan, Tlalnepantla, Ecatepec, Huixquilucan y todo EdoMex.",
+          "description": "Tu Gestoría Vehicular 100% en Línea para CDMX, Estado de México y Morelos. Realizamos alta de placas, reemplacamiento y cambios de propietario sin filas. Servicio seguro y garantizado.",
           "address": {
             "@type": "PostalAddress",
             "streetAddress": "Servicio Digital y Domicilio",
@@ -140,7 +140,7 @@
             "@type": "OfferCatalog",
             "name": "Servicios de Despacho de Gestoría",
             "itemListElement": [
-              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Gestoría Vehicular CDMX y EdoMex", "serviceType": "Gestoría" } },
+              { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Gestoría Vehicular Online (CDMX, EdoMex, Morelos)", "serviceType": "Gestoría Digital" } },
               { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Licencia Permanente CDMX", "serviceType": "Gestoría" } },
               { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Reemplacamiento EdoMex 2026", "serviceType": "Gestoría" } },
               { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Cambio de Propietario Urgente", "serviceType": "Gestoría" } },
@@ -356,11 +356,11 @@
                 <div class="hero-text">
                     <h1 style="font-size: 2.5rem; line-height: 1.2;">
                         <span style="font-weight: 800; color: white; display: block;"
-                            data-i18n="hero_title_main">Gestoría Vehicular #1 en CDMX y EdoMex</span>
+                            data-i18n="hero_title_main">Gestoría Vehicular #1 en CDMX, EdoMex y Morelos</span>
                         <span
                             style="font-weight: 600; color: #e2e8f0; font-size: 0.6em; display: block; margin-top: 0.5rem; letter-spacing: 1px; text-transform: uppercase;"
                             data-i18n="hero_title_sub">
-                            Tu Gestor de Confianza para Placas y Licencias
+                            Trámites 100% en Línea. Placas y Licencias sin filas.
                         </span>
                         <span
                             style="font-family: 'Yellowtail', cursive; font-size: 1.2em; color: #fbbf24; text-shadow: 2px 2px 0 #000; display: block; margin-top: 1rem;">
@@ -412,10 +412,11 @@
                     <div class="hero-trust-block">
                         <h2 class="trust-title">Realizamos los trámites vehiculares por Ti.</h2>
                         <p class="trust-desc">
-                            Gestor de Autos ofrece trámites vehiculares en múltiples estados de México: altas y bajas de
-                            placas, cambio de propietario, verificaciones, seguro y más, mira nuestro exelente Ranking
-                            en Google Maps (otros pueden tener mucho mas pero no dan una calidad exepcional como
-                            nosotros en tramites y un toque Humano siempre.)
+                            Gestor de Autos ofrece trámites vehiculares en línea para toda la República: altas y bajas
+                            de
+                            placas, cambio de propietario, verificaciones, seguro y más. Mira nuestro excelente Ranking
+                            en Google Maps (otros pueden tener mucho más pero no dan una calidad excepcional como
+                            nosotros en trámites y un toque humano siempre.)
                         </p>
                         <a href="https://maps.app.goo.gl/HEGvNwtQ4kYn3rpS7" target="_blank"
                             class="google-pill-badge glass-button">
