--- a/index.html
+++ b/index.html
@@ -471,6 +471,24 @@
 
 
 
+        <!-- HIGH PRIORITY SEO KEYWORD BAR (TRUST SIGNALS) -->
+        <section class="keyword-trust-bar"
+            style="background: #1e293b; color: white; padding: 1.5rem 0; text-align: center;">
+            <div class="container">
+                <p
+                    style="margin: 0; font-size: 1.1rem; font-weight: 500; display: flex; flex-wrap: wrap; justify-content: center; gap: 1.5rem; align-items: center;">
+                    <span style="display: flex; align-items: center; gap: 0.5rem;"><i class="fas fa-check-circle"
+                            style="color: #22c55e;"></i> Gestoría Vehicular CDMX</span>
+                    <span style="display: flex; align-items: center; gap: 0.5rem;"><i class="fas fa-check-circle"
+                            style="color: #22c55e;"></i> Placas EdoMex 2026</span>
+                    <span style="display: flex; align-items: center; gap: 0.5rem;"><i class="fas fa-check-circle"
+                            style="color: #22c55e;"></i> Refrendo Morelos Urgente</span>
+                    <span style="display: flex; align-items: center; gap: 0.5rem;"><i class="fas fa-check-circle"
+                            style="color: #22c55e;"></i> Gestor de Autos</span>
+                </p>
+            </div>
+        </section>
+
         <!-- Services Section -->
         <section id="servicios" class="section-padding services">
             <div class="container">
@@ -526,6 +544,21 @@
                 <div class="tab-content active" id="control">
 
                     <div class="services-grid">
+
+                        <!-- NEW HIGH PRIORITY CARD: REFRENDO MORELOS -->
+                        <div class="service-item premium-item" style="border: 2px solid #22c55e;">
+                            <div class="service-header">
+                                <div class="service-icon" style="background: rgba(34, 197, 94, 0.1); color: #22c55e;"><i
+                                        class="fas fa-receipt"></i></div>
+                                <div>
+                                    <h4 style="margin-bottom: 0;">Refrendo Morelos 2026</h4>
+                                    <small style="color: #22c55e; font-weight: 700;">¡Trámite Urgente Online!</small>
+                                    <small style="display: block; margin-top: 0.2rem;">Pago de tenencia y refrendo
+                                        vehicular en Cuernavaca y todo Morelos. Evita multas y recargos.</small>
+                                </div>
+                            </div>
+                        </div>
+
                         <!-- Alta Premium Card -->
                         <div class="service-item premium-item">
                             <div class="service-header">
