--- a/index.html
+++ b/index.html
@@ -1655,6 +1655,7 @@
                         Tecámac, Valle de Chalco, La Paz, y toda la Zona Metropolitana del Valle de México.</p>
                 </div>
             </div>
+        </section>
     </main>
 
 
@@ -2065,7 +2066,8 @@
                                     class="fab fa-whatsapp"></i> 55 2291 7267 - Lic Erika</a></li>
 
 
-                        <li><i class="fas fa-envelope"></i> contacto@gestordeautos.com.mx</li>
+                        <li><a href="mailto:contacto@gestordeautos.com.mx"><i class="fas fa-envelope"></i>
+                                contacto@gestordeautos.com.mx</a></li>
                         <li><i class="fas fa-map-marker-alt"></i> CDMX, México</li>
                     </ul>
                 </div>
