--- a/index.html
+++ b/index.html
@@ -737,6 +737,46 @@
                                 </div>
                             </div>
                         </div>
+
+                        <!-- Licencia Moto EdoMex 4 años -->
+                        <div class="service-item premium-item" style="background: linear-gradient(135deg, #f0fdf4, #dcfce7); border: 2px solid #16a34a;">
+                            <div class="service-header">
+                                <div class="service-icon" style="background: #16a34a; color:white;"><i class="fas fa-motorcycle"></i></div>
+                                <div>
+                                    <h4>Licencia de Moto &middot; EdoMex &middot; 4 A&ntilde;os</h4>
+                                    <small>Vigente &middot; Tipo B SEMOVI &middot; Sin filas</small>
+                                </div>
+                            </div>
+                            <div style="display:flex; gap:1.5rem; align-items:center; flex-wrap:wrap; margin-top:1rem;">
+                                <div style="flex-shrink:0; width:220px;">
+                                    <img src="assets/images/licencia-moto-edomex.svg" alt="Licencia de motociclista Estado de México 4 años" style="width:100%; border-radius:12px; box-shadow:0 4px 16px rgba(0,0,0,0.12);" loading="lazy">
+                                </div>
+                                <div style="flex:1; min-width:200px;">
+                                    <div class="service-tags" style="margin-bottom:0.75rem;">
+                                        <span class="tag"><i class="fas fa-motorcycle"></i> Tipo B</span>
+                                        <span class="tag"><i class="fas fa-calendar-alt"></i> 4 A&ntilde;os</span>
+                                        <span class="tag"><i class="fas fa-map-marker-alt"></i> EdoMex</span>
+                                    </div>
+                                    <p style="font-size:0.88rem; color:#475569; line-height:1.5; margin-bottom:0.75rem;">
+                                        Tramitamos tu <strong>licencia de motociclista en el Estado de M&eacute;xico</strong> con vigencia de 4 a&ntilde;os. 100% legal, sin madrugar. S&oacute;lo env&iacute;a tus docs por WhatsApp.
+                                    </p>
+                                    <a href="https://wa.me/525535757364?text=Hola,%20quiero%20tramitar%20mi%20Licencia%20de%20Moto%20EdoMex%204%20a%C3%B1os" class="btn btn-whatsapp" target="_blank" style="font-size:0.9rem; padding:0.6rem 1.2rem; display:inline-flex; align-items:center; gap:0.4rem;">
+                                        <i class="fab fa-whatsapp"></i> Cotizar Licencia Moto
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- CTA Licencia Permanente CDMX -->
+                        <div class="service-item" style="border:2px dashed #2563eb; background:#eff6ff; text-align:center;">
+                            <i class="fas fa-infinity" style="font-size:2rem; color:#2563eb; margin-bottom:0.4rem;"></i>
+                            <h4 style="color:#1e3a8a;">Licencia Permanente CDMX &middot; Tipo A</h4>
+                            <p style="font-size:0.85rem; color:#475569; margin:0.4rem 0 1rem;">La que tramitas <strong>una sola vez para toda la vida</strong>. Sin fecha de vencimiento. V&aacute;lida en toda la Rep&uacute;blica.</p>
+                            <a href="licencia-permanente-cdmx.html" class="btn btn-primary" style="font-size:0.9rem; padding:0.6rem 1.4rem;">
+                                <i class="fas fa-arrow-right"></i> Ver Requisitos y Cotizar
+                            </a>
+                        </div>
+
                     </div>
                 </div>
 
@@ -2054,6 +2094,9 @@
                         <li><a href="#inicio">Inicio</a></li>
                         <li><a href="#servicios">Servicios</a></li>
                         <li><a href="#contacto">Contacto</a></li>
+                        <li><a href="tramites-edomex.html">Gestoría EdoMex</a></li>
+                        <li><a href="licencia-permanente-cdmx.html">Licencia Permanente CDMX</a></li>
+                        <li><a href="refrendo-morelos.html">Refrendo Morelos 2026</a></li>
                         <li><a href="aviso-privacidad.html">Aviso de Privacidad</a></li>
                     </ul>
                 </div>
